Spring boot 3.1 upgrade changes
- Updating spring boot from 2.7 to 3.1 for schema service
- Speed up build process
Issue-ID: AAI-4200
Change-Id: I8d1c232595e6766bfef7b5c533a037d3fac42bf6
Signed-off-by: mithun.menon@t-systems.com <mithun.menon@t-systems.com>